chore: adjust sizes for mobile

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@babel/core": "^7.16.7",
     "classnames": "^2.3.1",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
@@ -22,32 +23,37 @@
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-syntax-jsx": "7.16.0",
+    "@babel/preset-react": "7.16.0",
+    "@iteam/eslint-config-react": "^0.3.1",
     "@next/bundle-analyzer": "^12.0.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
+    "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-next": "^12.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-testing-library": "5.0.0",
     "eslint-plugin-unused-imports": "^1.1.5",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
+    "prettier": "2.4.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.4.4"
+    "typescript": "^4.2.4"
   },
   "license": "ISC"
 }
