feat: new domain

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -15,9 +15,21 @@ spec:
   tls:
     - hosts:
         - upphandling.app
+        - happylou.se
+        - happylou.org
       secretName: landing-page-secret-tls
   rules:
     - host: upphandling.app
+      http:
+        paths:
+          - pathType: Prefix
+            path: '/'
+            backend:
+              service:
+                name: landing-page
+                port:
+                  number: 3000
+    - host: happylou.se
       http:
         paths:
           - pathType: Prefix
