--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -16,7 +16,7 @@ spec:
     - hosts:
         - upphandling.app
         - happylou.se
-        - happylou.org
+        # - happylou.org
       secretName: landing-page-secret-tls
   rules:
     - host: upphandling.app
@@ -39,13 +39,13 @@ spec:
                 name: landing-page
                 port:
                   number: 3000
-    - host: happylou.org
-      http:
-        paths:
-          - pathType: Prefix
-            path: '/'
-            backend:
-              service:
-                name: landing-page
-                port:
-                  number: 3000
+    # - host: happylou.org
+    #   http:
+    #     paths:
+    #       - pathType: Prefix
+    #         path: '/'
+    #         backend:
+    #           service:
+    #             name: landing-page
+    #             port:
+    #               number: 3000
