--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: upphandling
+  name: happylou
   labels:
-    name: upphandling
+    name: happylou
