--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,15 +1,14 @@
-apiVersion: skaffold/v2beta23
+apiVersion: skaffold/v4beta1
 kind: Config
 metadata:
   name: landing-page
 build:
   artifacts:
-    - image: happylou/landing-page
-      docker:
-        dockerfile: Dockerfile
+  - image: happylou/landing-page
+    docker:
+      dockerfile: Dockerfile
+manifests:
+  rawYaml:
+  - k8s/*
 deploy:
-  kubectl:
-    manifests:
-      - k8s/deployment.yaml
-      - k8s/ingress.yaml
-      - k8s/namespace.yaml
+  kubectl: {}
