feat: use flux directly on kustomize

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -3,5 +3,7 @@ kind: Kustomization
 namespace: happylou
 
 resources:
-  - latest.yaml
+  - namespace.yaml
+  - deployment.yaml
   - redirect-old-domain-ingress.yaml
+  - ingress.yaml
