--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,6 +26,6 @@ spec:
     spec:
       containers:
         - name: landing-page
-          image: registry.iteam.services/happylou_landing-page  # {"$imagepolicy": "flux-system:landing-page"}
+          image: registry.iteam.services/happylou_landing-page  # {"$imagepolicy": "happylou:landing-page"}
           ports:
             - containerPort: 3000
