--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -8,13 +8,13 @@ metadata:
     nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
     nginx.ingress.kubernetes.io/http2-push-preload: 'true'
     nginx.ingress.kubernetes.io/proxy-pass-headers: 'Location'
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      more_set_headers "X-Content-Type-Options: nosniff";
-      more_set_headers "X-Frame-Options: DENY";
-      more_set_headers "X-Xss-Protection: 0";
-      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains;";
-      more_set_headers "Cross-Origin-Resource-Policy: same-site";
-      more_set_headers "Referrer-Policy strict-origin";
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   more_set_headers "X-Content-Type-Options: nosniff";
+    #   more_set_headers "X-Frame-Options: DENY";
+    #   more_set_headers "X-Xss-Protection: 0";
+    #   more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains;";
+    #   more_set_headers "Cross-Origin-Resource-Policy: same-site";
+    #   more_set_headers "Referrer-Policy strict-origin";
     cert-manager.io/cluster-issuer: 'letsencrypt-prod'
     external-dns.alpha.kubernetes.io/hostname: happylou.se.
 
